modules/cli/src/test/resources/bad/syntax/disamb/imports/pack1/Import19b.scr
module bad.syntax.disamb.imports.pack1.Import19b;


global protocol Proto1(role C, role D)
{
	() from C to A;
}

